2012-02-10 Guido Scholz <guido.scholz@bayernline.de>
	* src/mainwindow.cpp: Add new menu item to open demo patch files
	directly.

2012-02-09 Guido Scholz <guido.scholz@bayernline.de>
	* src/module.h, src/m_v8sequencer.h, m_v8sequencer.cpp: Update
	V8 Sequencer module by Bill Yerazunis.
	* demos/v8_seq_demo_[123].ams: Add example patches for V8 Sequencer,
	provided by Bill Yerazunis.

2012-02-08 Guido Scholz <guido.scholz@bayernline.de>
	* src/mainwindow.cpp, src/modularsynth.*, src/module.h,
	src/m_v8sequencer.h, m_v8sequencer.cpp: Add new V8 Sequencer 
	module by Bill Yerazunis.

2012-02-07 Guido Scholz <guido.scholz@bayernline.de>
	* src/mainwindow.cpp, src/modularsynth.*, src/prefwidget.*: Add
	preferences option for module position grid.
	* src/m_scmcv.cpp, src/m_sh.cpp, src/m_ringmod.cpp,src/m_mix.cpp,
	src/m_mphlfo.cpp, src/m_mphlfo.cpp, src/m_noise.cpp,
	src/m_noise2.cpp, src/m_quantizer.cpp, src/m_seq.cpp,
	src/m_slew.cpp, src/m_scope.cpp, src/m_stereomix.cpp,
	src/m_vcdoubledecay.cpp, src/m_vcenv.cpp, src/m_vco2.cpp,
	src/m_vcorgan.cpp, src/m_vcpanning.cpp, src/m_vcswitch.cpp,
	src/m_vquant.cpp, src/m_cvs.cpp, src/m_vca.cpp,
	src/m_vco.cpp, src/m_vcenv2.cpp, src/m_vcf.cpp: Add
	keyboard shortcuts for config dialog items.

2012-02-04 Guido Scholz <guido.scholz@bayernline.de>
	* src/midisliderbase.cpp, src/midicombobox.cpp,
	src/configdialog.cpp: Enable keyboard shortcuts for GUI items.
	* src/m_wavout.cpp, src/m_pcmout.cpp, src/m_pcmin.cpp, src/m_ad.cpp,
	src/m_delay.cpp, src/m_amp.cpp, src/m_advenv.cpp, src/m_env,
	m_advmcv.cpp, src/m_conv.cpp, src/m_dynamicwaves.cpp, src/m_lfo.cpp
	src/m_function.cpp, src/m_mcv.cpp, src/m_midiout.cpp: Add
	keyboard shortcuts for config dialog items.

2012-02-03 Guido Scholz <guido.scholz@bayernline.de>
	* src/main.cpp: Remove obsolete commandline option -l (preset file).
	Add commandline option for program version (--version).
	* src/mainwindow.*, src/ladspadialog.cpp, src/synthdata.cpp: Enable